<resources>
    <string name="app_name">JapaLearn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_save">Save</string>

    <!-- Drawer menu items -->
    <string name="menu_home">Home</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_kanjis">Kanjis</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_flash_cards">Flash cards</string>
    <string name="menu_feedback">Give feedback</string>
    <string name="menu_logout">Log out</string>

...
