...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/flash_card_list_recyclerview"
        tools:visibility="visible">

        <Button
            android:id="@+id/new_deck_button"
            android:layout_width="match_parent"
...
